Bytecode Encryption (Linux Only), Reduced Questions

--- a/App/res/info.html
+++ b/App/res/info.html
@@ -11,6 +11,6 @@
 <h2>Can I Recover my Files?</h2>
 <p>
     Sure! We guarantee that you can recover all your files safely and easily.<br>
-    Just do some random shit and click Decrypt!
+    Just click Decrypt!
 </p>
 </p>
